digital-workspace/2.2/index.md
---
title: Alfresco Digital Workspace
---
Alfresco Digital Workspace is a new content management application built with the Alfresco Application Development Framework (ADF). The user interface has been streamlined making simple tasks such as uploading, downloading, searching for content, and collaborating with others much easier. You can create public, moderated, and private libraries. Access for other users to these libraries can be configured by setting permissions, at an individual or group level. Libraries can be added to your favorites list so they can be accessed easily. The search feature is powerful and includes numerous filters based on your metadata, so you can quickly find what you are looking for.

Alfresco Governance Services functionality for end users is available, including record declaration and archival of files into long term storage. Alfresco Process Services processes and tasks can also be accessed and completed from Alfresco Digital Workspace.

You can edit and collaborate with colleagues on existing Microsoft Word, Excel, and PowerPoint files you have stored in Alfresco Content Services (originating from Microsoft Office Online) if you use [Alfresco Collaboration Connector for Microsoft 365]({% link microsoft-365/latest/index.md %}).

The Alfresco Digital Workspace simplifies content management and provides comprehensive extensibility features for developers, using ADF, and allows them to easily and quickly create custom solutions for specific use cases.

The Alfresco Digital Workspace is automatically deployed as part of Alfresco Content Services using Helm charts or a Docker Compose file. You can also manually install Alfresco Content Services using standard WAR files and then configure the installation to include Alfresco Digital Workspace.

See the following video for a quick introduction.

{% include media.html id="giypeO8Q4cs" %}
